# qr-web-app

./: .gitignore  compose.dev.yml
backend/: main.py  pyproject.toml
configs/: traefik.yml
frontend/: bun.lockb  index.html
