[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend to a site that lets you create QR codes and add them to your images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "python-multipart>=0.0.20",
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
